--- a/about-us.html
+++ b/about-us.html
@@ -103,10 +103,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="office-subscription.html"> اشتراك </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="track-order.html"> تتبع الطلب </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html"> من نحن </a>
@@ -246,6 +249,9 @@
     <div class="ecommerce-about-cta ecommerce-about-service">
         <div class="container">
             <div class="row">
+                <div class="col-12 mb-3">
+                    <h2>لماذا نحن؟</h2>
+                </div>
                 <div class="col-lg-4">
                     <div class="card card-animate border-0 h-100 shadow-lg">
                         <div class="card-body">
@@ -287,7 +293,7 @@
     </div>
     <section class="ecommerce-about-team bg-light bg-opacity-50">
     </section>
-    <section class="section">
+    <section class="section aboutsec">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -303,11 +309,8 @@
                             نحن نقدم خدمة فريدة من نوعها لعائلتك، حيث نسعى جاهدين لتوفير أوقات سعيدة وجميلة لكم. نحن
                             ندرك أن الحياة تمر بسرعة وأنه من الصعب العثور على الوقت الكافي للاسترخاء والاستمتاع بالحياة.
                             لذلك، نحن نسعى جاهدين لتوفير خدماتنا لتحسين جودة حياتكم.
-
                             نحن نقدم مجموعة واسعة من الخدمات التي تركز على توفير الراحة والسعادة لعائلتك. من خلال
                             خدماتنا، يمكنكم الاسترخاء والاستمتاع بوقتكم معًا دون القلق بشأن الترتيبات والتفاصيل الصغيرة.
-
-
                             نحن نؤمن بأن الحياة تستحق العيش بشكل أفضل وأن العائلة هي أهم شيء في الحياة. لذلك، نحن نعمل
                             بكل جهد لتوفير لكم خدمات عالية الجودة وتجربة لا تُنسى. نحن نفخر بخدماتنا ونتطلع إلى خدمتكم
                             وتوفير لكم أوقات سعيدة وحياة أفضل.
@@ -317,6 +320,24 @@
             </div>
         </div>
     </section>
+    <!-- social media -->
+    <div class="social-media">
+        <ul>
+            <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
+    </div>
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
