--- a/auth-twostep.html
+++ b/auth-twostep.html
@@ -39,12 +39,11 @@
                         <div class="auth-card mx-lg-3">
                             <div class="card border-0 mb-0">
                                 <div class="card-header bg-primary border-0">
-                                    <h4 class="text-white lh-base fw-bold text-center py-3 mb-0"> تحقق من بريدك
-                                        الإلكتروني </h4>
+                                    <h4 class="text-white lh-base fw-bold text-center py-3 mb-0"> تحقق من بريد جوالك </h4>
                                 </div>
                                 <div class="card-body text-center">
-                                    <p class="text-muted fs-15">يرجى إدخال الرمز المؤلف من 4 أرقام المرسل إلى
-                                        <span class="fw-semibold">example@abc.com</span>
+                                    <p class="text-muted fs-15"> يرجى إدخال الرمز المؤلف من 4 أرقام المرسل إلى الرقم
+                                        <span class="fw-semibold"><b>05</b><b>xxx</b><b>xxxx</b></span>
                                     </p>
                                     <div class="p-2">
                                         <form action="auth-pass-change.html">
