--- a/cv-details.html
+++ b/cv-details.html
@@ -103,10 +103,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="office-subscription.html"> اشتراك </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="track-order.html"> تتبع الطلب </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html"> من نحن </a>
@@ -235,12 +238,12 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <div class="product-thumb rounded cursor-pointer">
-                                            <img src="assets/images/users/avatar-3.jpg" alt="" class="img-fluid" />
+                                            <img src="assets/images/workers/7.jpg" alt="" class="img-fluid" />
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="product-thumb rounded cursor-pointer">
-                                            <img src="assets/images/users/avatar-5.jpg" alt="" class="img-fluid" />
+                                            <img src="assets/images/workers/8.jpg" alt="" class="img-fluid" />
                                         </div>
                                     </div>
                                 </div>
@@ -250,18 +253,18 @@
                             <div class="bg-light rounded-2 position-relative ribbon-box overflow-hidden">
                                 <div class="ribbon ribbon-danger ribbon-shape trending-ribbon">
                                     <i class="fa fa-briefcase  text-white "></i>
-                                    <span class="trending-ribbon-text"> سائق خاص </span>
+                                    <span class="trending-ribbon-text"> عامل بناء </span>
                                 </div>
                                 <div class="swiper productSwiper2">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide ">
-                                            <a data-fancybox="CV1" href="assets/images/users/avatar-3.jpg">
-                                                <img src="assets/images/users/avatar-3.jpg" alt="">
+                                            <a data-fancybox="CV1" href="assets/images/workers/7.jpg">
+                                                <img src="assets/images/workers/7.jpg" alt="">
                                             </a>
                                         </div>
                                         <div class="swiper-slide ">
-                                            <a data-fancybox="CV1" href="assets/images/users/avatar-5.jpg">
-                                                <img src="assets/images/users/avatar-5.jpg" alt="">
+                                            <a data-fancybox="CV1" href="assets/images/workers/8.jpg">
+                                                <img src="assets/images/workers/8.jpg" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -275,21 +278,20 @@
                 <div class="col-lg-5 ms-auto">
                     <div class="ecommerce-product-widgets mt-4 mt-lg-0">
                         <div class="mb-4">
-                            <h4 class="lh-base mb-4"> علي عبدالله الحمود </h4>
-
+                            <h4 class="lh-base mb-4"> باسيليو براندو </h4>
                             <div class="row">
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
                                     <i class="fa-regular fa-sparkles fs-16 text-success"></i>
                                     <div class="d-flex flex-column gap-1">
                                         <span class="text-muted"> الجنسية : </span>
-                                        <h6> اوغندا </h6>
+                                        <h6> فلبين </h6>
                                     </div>
                                 </div>
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
                                     <i class="fa-regular fa-sparkles fs-16 text-success"></i>
                                     <div class="d-flex flex-column gap-1">
                                         <span class="text-muted"> الديانة : </span>
-                                        <h6> مسلمة </h6>
+                                        <h6> مسلم </h6>
                                     </div>
                                 </div>
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
@@ -364,23 +366,23 @@
                         </tr>
                         <tr>
                             <th> السن : </th>
-                            <td> 25 سنة </td>
+                            <td> 35 سنة </td>
                         </tr>
                         <tr>
                             <th> مكان الميلاد : </th>
-                            <td> الهند </td>
+                            <td> الفلبين </td>
                         </tr>
                         <tr>
                             <th> الطول : </th>
-                            <td> 166 </td>
+                            <td> 175 </td>
                         </tr>
                         <tr>
                             <th> الوزن : </th>
-                            <td> 59 </td>
+                            <td> 65 </td>
                         </tr>
                         <tr>
                             <th> عدد الاطفال : </th>
-                            <td> 5 </td>
+                            <td> 0 </td>
                         </tr>
                     </table>
                 </div>
@@ -445,27 +447,89 @@
             <div class="row">
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
                     <a href="cv-details.html" class="cv">
-                        <img src="assets/images/users/avatar-1.jpg" alt="">
-                        <div class="mainInfo">
-                            <h4> خالد توفيق مجدى </h4>
+                        <div class="imgall">
+                            <img src="assets/images/workers/3.jpg" alt="">
+                        </div>
+                        <div class="mainInfo mt-3">
+                            <h4> تحيه على الحمدون </h4>
+                            <div class="age"><span>32</span> سنة</div>
+                        </div>
+                        <div class="subInfo">
+                            <div class="sub">
+                                <p>الجنسية</p>
+                                <h6>هنديه</h6>
+                            </div>
+                            <div class="sub">
+                                <p>المهنة</p>
+                                <h6> مربيه اطفال </h6>
+                            </div>
+                            <div class="sub">
+                                <p>الديانة</p>
+                                <h6>مسلمة</h6>
+                            </div>
+                            <div class="sub">
+                                <p>الحالة الاجتماعية</p>
+                                <h6>متزوجة</h6>
+                            </div>
+                        </div>
+                        <span class="more btn ">عرض التفاصيل</span>
+                    </a>
+                </div>
+                <div class="col-xxl-3 col-lg-4 col-sm-6">
+                    <a href="cv-details.html" class="cv">
+                        <div class="imgall">
+                            <img src="assets/images/workers/4.jpg" alt="">
+                        </div>
+                        <div class="mainInfo mt-3">
+                            <h4>نورة سعد الدين</h4>
+                            <div class="age"><span>26</span> سنة</div>
+                        </div>
+                        <div class="subInfo">
+                            <div class="sub">
+                                <p>الجنسية</p>
+                                <h6>كينيه</h6>
+                            </div>
+                            <div class="sub">
+                                <p>المهنة</p>
+                                <h6>ساحره</h6>
+                            </div>
+                            <div class="sub">
+                                <p>الديانة</p>
+                                <h6>مسلمة</h6>
+                            </div>
+                            <div class="sub">
+                                <p>الحالة الاجتماعية</p>
+                                <h6>متزوجة</h6>
+                            </div>
+                        </div>
+                        <span class="more btn ">عرض التفاصيل</span>
+                    </a>
+                </div>
+                <div class="col-xxl-3 col-lg-4 col-sm-6">
+                    <a href="cv-details.html" class="cv">
+                        <div class="imgall">
+                            <img src="assets/images/workers/5.jpg" alt="">
+                        </div>
+                        <div class="mainInfo mt-3">
+                            <h4> رقيه توفيق مجدى </h4>
                             <div class="age"> <span> 24</span> سنة </div>
                         </div>
                         <div class="subInfo">
                             <div class="sub">
                                 <p> الجنسية </p>
-                                <h6> هندي </h6>
+                                <h6> فلبينيه </h6>
                             </div>
                             <div class="sub">
                                 <p> المهنة </p>
-                                <h6> سائق خاص </h6>
+                                <h6> عاملة منزلية </h6>
                             </div>
                             <div class="sub">
                                 <p> الديانة </p>
-                                <h6> مسلم </h6>
+                                <h6> مسلمة </h6>
                             </div>
                             <div class="sub">
                                 <p> الحالة الاجتماعية </p>
-                                <h6> أعزب </h6>
+                                <h6> عزباء </h6>
                             </div>
                         </div>
                         <span class="more btn "> عرض التفاصيل </span>
@@ -473,19 +537,21 @@
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
                     <a href="cv-details.html" class="cv">
-                        <img src="assets/images/users/avatar-2.jpg" alt="">
-                        <div class="mainInfo">
+                        <div class="imgall">
+                            <img src="assets/images/workers/6.jpg" alt="">
+                        </div>
+                        <div class="mainInfo mt-3">
                             <h4>عائشة محمد صالح</h4>
                             <div class="age"><span>28</span> سنة</div>
                         </div>
                         <div class="subInfo">
                             <div class="sub">
                                 <p>الجنسية</p>
-                                <h6>سودانية</h6>
+                                <h6>مصرية</h6>
                             </div>
                             <div class="sub">
                                 <p>المهنة</p>
-                                <h6>ممرضة</h6>
+                                <h6>مربيه اطفال</h6>
                             </div>
                             <div class="sub">
                                 <p>الديانة</p>
@@ -498,65 +564,27 @@
                         </div> <span class="more btn ">عرض التفاصيل</span>
                     </a>
                 </div>
-                <div class="col-xxl-3 col-lg-4 col-sm-6">
-                    <a href="cv-details.html" class="cv">
-                        <img src="assets/images/users/avatar-3.jpg" alt="">
-                        <div class="mainInfo">
-                            <h4>علي عبدالله الحمود</h4>
-                            <div class="age"><span>32</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>سعودي</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>مهندس مدني</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلم</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوج</h6>
-                            </div>
-                        </div>
-                        <span class="more btn ">عرض التفاصيل</span>
-                    </a>
-                </div>
-                <div class="col-xxl-3 col-lg-4 col-sm-6">
-                    <a href="cv-details.html" class="cv">
-                        <img src="assets/images/users/avatar-4.jpg" alt="">
-                        <div class="mainInfo">
-                            <h4>نورة سعد الدين</h4>
-                            <div class="age"><span>26</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>مصرية</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>محاسبة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>أعزبة</h6>
-                            </div>
-                        </div>
-                        <span class="more btn ">عرض التفاصيل</span>
-                    </a>
-                </div>
             </div>
         </div><!--end section-->
     </section>
+    <!-- social media -->
+    <div class="social-media">
+        <ul>
+            <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
+    </div>
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
