--- a/account.html
+++ b/account.html
@@ -103,10 +103,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="office-subscription.html"> اشتراك </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="track-order.html"> تتبع الطلب </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html"> من نحن </a>
@@ -429,8 +432,8 @@
                                                                     مسؤلى خدمة العملاء</span>
                                                             </td>
                                                             <td>
-                                                                <button
-                                                                    class="btn details-btn btn-secondary">التفاصيل</button>
+                                                                <a href="track-order.html"
+                                                                    class="btn details-btn btn-secondary">التفاصيل</a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -457,8 +460,8 @@
                                                                     مسؤلى خدمة العملاء</span>
                                                             </td>
                                                             <td>
-                                                                <button
-                                                                    class="btn details-btn btn-secondary">التفاصيل</button>
+                                                                <a href="track-order.html"
+                                                                    class="btn details-btn btn-secondary">التفاصيل</a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -485,8 +488,8 @@
                                                                     مسؤلى خدمة العملاء</span>
                                                             </td>
                                                             <td>
-                                                                <button
-                                                                    class="btn details-btn btn-secondary">التفاصيل</button>
+                                                                <a href="track-order.html"
+                                                                    class="btn details-btn btn-secondary">التفاصيل</a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -513,8 +516,8 @@
                                                                     مسؤلى خدمة العملاء</span>
                                                             </td>
                                                             <td>
-                                                                <button
-                                                                    class="btn details-btn btn-secondary">التفاصيل</button>
+                                                                <a href="track-order.html"
+                                                                    class="btn details-btn btn-secondary">التفاصيل</a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -541,8 +544,8 @@
                                                                     مسؤلى خدمة العملاء</span>
                                                             </td>
                                                             <td>
-                                                                <button
-                                                                    class="btn details-btn btn-secondary">التفاصيل</button>
+                                                                <a href="track-order.html"
+                                                                    class="btn details-btn btn-secondary">التفاصيل</a>
                                                             </td>
                                                         </tr>
                                                     </tbody>
@@ -1083,6 +1086,24 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- social media -->
+    <div class="social-media">
+        <ul>
+            <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
     </div>
     <!-- footer -->
     <section class="section footer-landing pb-0">
