--- a/auth-signup.html
+++ b/auth-signup.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="p-2">
-                                        <form class="needs-validation" novalidate action="index.html">
+                                        <form class="needs-validation" novalidate action="auth-twostep.html">
                                             <div class="mb-3">
                                                 <label for="useremail" class="form-label">البريد الإلكتروني <span
                                                         class="text-danger">*</span></label>
