--- a/blogs.html
+++ b/blogs.html
@@ -103,10 +103,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="office-subscription.html"> اشتراك </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="track-order.html"> تتبع الطلب </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html"> من نحن </a>
@@ -118,7 +121,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-md dropdown-menu-center dropdown-menu-list submenu">
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> المقالات </a>
+                                <a href="blogs.html" class="nav-link"> المقالات </a>
                             </li>
                             <li class="nav-item">
                                 <a href="faq.html" class="nav-link"> مركز المساعدة </a>
@@ -369,6 +372,24 @@
             </div>
         </div>
     </section>
+    <!-- social media -->
+    <div class="social-media">
+        <ul>
+            <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
+    </div>
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
