--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -103,10 +103,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="office-subscription.html"> اشتراك </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="track-order.html"> تتبع الطلب </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html"> من نحن </a>
@@ -158,7 +161,6 @@
                             تسجيل الدخول </a>
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
-
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="auth-logout.html"> <i
                                 class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
@@ -300,22 +302,35 @@
                                     مسؤولين عن أي تأخير في التسليم نتيجة لأسباب خارجة عن إرادتنا مثل الظروف الجوية
                                 </p>
                             </div>
-
-
                             <div class="alert alert-danger">
                                 لن يُسمح باستخدام شعار أو عمل فني خاص بشركة " عالم الاستقدام " للارتباط بدون اتفاقية
                                 ترخيص
                                 العلامة التجارية.
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
+    <!-- social media -->
+    <div class="social-media">
+        <ul>
+            <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
+    </div>
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
